Styles fixed to work appropriatelly on iphone also

--- a/assets/css/cutter.css
+++ b/assets/css/cutter.css
@@ -31,14 +31,11 @@
 }
 
 .image-cutter .dropzone .img-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    position: relative;
     text-align: center;
     overflow: hidden;
     padding: 1px;
+    display: block;
 }
 
 .image-cutter .dropzone .img-container:before {
@@ -63,6 +60,10 @@
 .image-cutter .dropzone .img-container img {
     max-height: 100%;
     max-width: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 
